@@ -1,3 +1,10 @@
+Sun Feb  8 20:30:29 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/extconf.rb: check struct sockcred.
+
+	* ext/socket/ancdata.c (anc_inspect_socket_creds): new function to
+	  show SCM_CREDS on NetBSD.
+
 Sun Feb  8 19:05:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/backward/rubysig.h: extern "C" was missing.
